added endpoints for all|edit|register wood Types
