# src/controllers/images/allImages.ts
@@ -1,5 +1,4 @@
 import { Controller, Get, Route, Tags } from "tsoa";
-import ErrorReturn from "../../moddels/errorReturn";
 import { db } from "../../db";
 import { ImageLink } from "../../moddels/imgLink";
 
@@ -7,7 +6,7 @@ import { ImageLink } from "../../moddels/imgLink";
 export class AllImages extends Controller {
     @Get("/all")
     @Tags("get")
-    public async allImages(): Promise<ImageLink[] | ErrorReturn> {
+    public async allImages(): Promise<ImageLink[]> {
         const images = await db.imageLink.findMany();
 
         return images as unknown[] as ImageLink[];
